create `EmploymentRequest` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2168,6 +2168,64 @@
   "boilerplate.containers.Payroll.medicalInsurance.All": "الكل",
 
   "boilerplate.containers.Payroll.recruitment.id": "الكود",
+  "boilerplate.containers.Payroll.recruitment.insertDate": "تاريخ الإدراج",
+  "boilerplate.containers.Payroll.recruitment.generalInformation": "معلومات عامة",
+  "boilerplate.containers.Payroll.recruitment.salaryRange": "نطاق الراتب",
+  "boilerplate.containers.Payroll.recruitment.jobDescription": "وصف الوظيفة",
+  "boilerplate.containers.Payroll.recruitment.noJobDescription": "لا يوجد وصف وظيفي",
+  "boilerplate.containers.Payroll.recruitment.editDescription": "تحرير الوصف",
+  "boilerplate.containers.Payroll.recruitment.addDescription": "إضافة وصف",
+  "boilerplate.containers.Payroll.recruitment.addDescriptionInfo": "الرجاء إضافة قائمة المسؤوليات إلى الوظيفة",
+  "boilerplate.containers.Payroll.recruitment.jobKnowledge": "معرفة الوظيفة",
+  "boilerplate.containers.Payroll.recruitment.noKnowledgeDescription": "لا يوجد وصف للمعرفة",
+  "boilerplate.containers.Payroll.recruitment.editKnowledge": "تحرير المعرفة",
+  "boilerplate.containers.Payroll.recruitment.addKnowledge": "إضافة معرفة",
+  "boilerplate.containers.Payroll.recruitment.knowledge": "المعرفة",
+  "boilerplate.containers.Payroll.recruitment.addKnowledgeInfo": "يرجى إضافة مجالات المعرفة التي يجب أن يعرفها المرشح",
+  "boilerplate.containers.Payroll.recruitment.jobSkill": "مهارة الوظيفة",
+  "boilerplate.containers.Payroll.recruitment.noSkill": "لا توجد مهارة",
+  "boilerplate.containers.Payroll.recruitment.editSkill": "تحرير المهارة",
+  "boilerplate.containers.Payroll.recruitment.addSkill": "إضافة مهارة",
+  "boilerplate.containers.Payroll.recruitment.skill": "المهارة",
+  "boilerplate.containers.Payroll.recruitment.addSkillInfo": "يرجى إضافة وتعديل قائمة المهارات المطلوبة وتحديد المستوى المطلوب",
+  "boilerplate.containers.Payroll.recruitment.close": "إغلاق",
+  "boilerplate.containers.Payroll.recruitment.save": "حفظ",
+  "boilerplate.containers.Payroll.recruitment.vacanciesNumber": "عدد الوظائف",
+  "boilerplate.containers.Payroll.recruitment.subordinatesNumber": "عدد المرؤوسين",
+  "boilerplate.containers.Payroll.recruitment.newPosition": "وظيفة جديدة",
+  "boilerplate.containers.Payroll.recruitment.replacementPosition": "وظيفة الاستبدال",
+  "boilerplate.containers.Payroll.recruitment.newReplacementOrPosition": "وظيفة جديدة أو استبدال",
+  "boilerplate.containers.Payroll.recruitment.level": "المستوى",
+  "boilerplate.containers.Payroll.recruitment.arabic": "عربي",
+  "boilerplate.containers.Payroll.recruitment.english": "إنجليزي",
+  "boilerplate.containers.Payroll.recruitment.other": "آخر",
+  "boilerplate.containers.Payroll.recruitment.languages": "اللغات",
+  "boilerplate.containers.Payroll.recruitment.otherLanguage": "لغة أخرى",
+  "boilerplate.containers.Payroll.recruitment.languageInfo": "يرجى تحديد اللغة المطلوبة وتحديد المستوى المطلوب",
+  "boilerplate.containers.Payroll.recruitment.jobSpecifications": "مواصفات الوظيفة",
+  "boilerplate.containers.Payroll.recruitment.male": "ذكر",
+  "boilerplate.containers.Payroll.recruitment.female": "أنثى",
+  "boilerplate.containers.Payroll.recruitment.any": "أي",
+  "boilerplate.containers.Payroll.recruitment.age": "العمر",
+  "boilerplate.containers.Payroll.recruitment.year": "سنة",
+  "boilerplate.containers.Payroll.recruitment.jobType": "نوع الوظيفة",
+  "boilerplate.containers.Payroll.recruitment.fullTime": "دوام كامل",
+  "boilerplate.containers.Payroll.recruitment.partTime": "دوام جزئي",
+  "boilerplate.containers.Payroll.recruitment.temp": "مؤقت",
+  "boilerplate.containers.Payroll.recruitment.training": "تدريب",
+  "boilerplate.containers.Payroll.recruitment.jobLevel": "مستوى الوظيفة",
+  "boilerplate.containers.Payroll.recruitment.junior": "جنيور",
+  "boilerplate.containers.Payroll.recruitment.senior": "سنيور",
+  "boilerplate.containers.Payroll.recruitment.supervisor": "مشرف",
+  "boilerplate.containers.Payroll.recruitment.manager": "مدير",
+  "boilerplate.containers.Payroll.recruitment.director": "مدير تنفيذي",
+  "boilerplate.containers.Payroll.recruitment.educationLevel": "مستوى التعليم",
+  "boilerplate.containers.Payroll.recruitment.highSchool": "المدرسة الثانوية",
+  "boilerplate.containers.Payroll.recruitment.bachelorDegree": "درجة البكالوريوس",
+  "boilerplate.containers.Payroll.recruitment.diploma": "الدبلوم",
+  "boilerplate.containers.Payroll.recruitment.masters": "الماجستير",
+  "boilerplate.containers.Payroll.recruitment.dpa-phd": "الدكتوراه / الدكتوراه",
+  "boilerplate.containers.Payroll.recruitment.educationMajor": "تخصص التعليم",
   "boilerplate.containers.Payroll.recruitment.candidateName": "اسم المرشح",
   "boilerplate.containers.Payroll.recruitment.technicalInterviewStatus": "حالة المقابله(الفنى)",
   "boilerplate.containers.Payroll.recruitment.jobName": "اسم الوظيقة",
