--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2119,6 +2119,64 @@
 
   "boilerplate.containers.Payroll.recruitment.grossSalary": "Gross Salary",
   "boilerplate.containers.Payroll.recruitment.id": "Id",
+  "boilerplate.containers.Payroll.recruitment.insertDate": "Insert Date",
+  "boilerplate.containers.Payroll.recruitment.generalInformation": "General Information",
+  "boilerplate.containers.Payroll.recruitment.salaryRange": "Salary Range",
+  "boilerplate.containers.Payroll.recruitment.jobDescription": "Job Description",
+  "boilerplate.containers.Payroll.recruitment.noJobDescription": "No Job Description",
+  "boilerplate.containers.Payroll.recruitment.editDescription": "Edit Description",
+  "boilerplate.containers.Payroll.recruitment.addDescription": "Add Description",
+  "boilerplate.containers.Payroll.recruitment.addDescriptionInfo": "Please Add The List Of Responsibilities To The Job",
+  "boilerplate.containers.Payroll.recruitment.jobKnowledge": "Job Knowledge",
+  "boilerplate.containers.Payroll.recruitment.noKnowledgeDescription": "No Knowledge Description",
+  "boilerplate.containers.Payroll.recruitment.editKnowledge": "Edit Knowledge",
+  "boilerplate.containers.Payroll.recruitment.addKnowledge": "Add Knowledge",
+  "boilerplate.containers.Payroll.recruitment.knowledge": "Knowledge",
+  "boilerplate.containers.Payroll.recruitment.addKnowledgeInfo": "Please Add The Areas Of Knowledge That The Candidate Shall Know",
+  "boilerplate.containers.Payroll.recruitment.jobSkill": "Job Skill",
+  "boilerplate.containers.Payroll.recruitment.noSkill": "No Skill",
+  "boilerplate.containers.Payroll.recruitment.editSkill": "Edit Skill",
+  "boilerplate.containers.Payroll.recruitment.addSkill": "Add Skill",
+  "boilerplate.containers.Payroll.recruitment.skill": "Skill",
+  "boilerplate.containers.Payroll.recruitment.addSkillInfo": "Please Add And Edit The List Of Skills Required And Specify The Required Level",
+  "boilerplate.containers.Payroll.recruitment.close": "Close",
+  "boilerplate.containers.Payroll.recruitment.save": "Save",
+  "boilerplate.containers.Payroll.recruitment.vacanciesNumber": "Vacancies Number",
+  "boilerplate.containers.Payroll.recruitment.subordinatesNumber": "Subordinates Number",
+  "boilerplate.containers.Payroll.recruitment.newPosition": "New Position",
+  "boilerplate.containers.Payroll.recruitment.replacementPosition": "Replacement Position",
+  "boilerplate.containers.Payroll.recruitment.newReplacementOrPosition": "New Replacement Or Position",
+  "boilerplate.containers.Payroll.recruitment.level": "Level",
+  "boilerplate.containers.Payroll.recruitment.arabic": "Arabic",
+  "boilerplate.containers.Payroll.recruitment.english": "English",
+  "boilerplate.containers.Payroll.recruitment.other": "Other",
+  "boilerplate.containers.Payroll.recruitment.languages": "Languages",
+  "boilerplate.containers.Payroll.recruitment.otherLanguage": "Other Language",
+  "boilerplate.containers.Payroll.recruitment.languageInfo": "Please Tick The Language That Is Required And Specify The Required Level",
+  "boilerplate.containers.Payroll.recruitment.jobSpecifications": "Job Specifications",
+  "boilerplate.containers.Payroll.recruitment.male": "Male",
+  "boilerplate.containers.Payroll.recruitment.female": "Female",
+  "boilerplate.containers.Payroll.recruitment.any": "Any",
+  "boilerplate.containers.Payroll.recruitment.age": "Age",
+  "boilerplate.containers.Payroll.recruitment.year": "Year",
+  "boilerplate.containers.Payroll.recruitment.jobType": "Job Type",
+  "boilerplate.containers.Payroll.recruitment.fullTime": "Full Time",
+  "boilerplate.containers.Payroll.recruitment.partTime": "Part Time",
+  "boilerplate.containers.Payroll.recruitment.temp": "Temp",
+  "boilerplate.containers.Payroll.recruitment.training": "Training",
+  "boilerplate.containers.Payroll.recruitment.jobLevel": "Job Level",
+  "boilerplate.containers.Payroll.recruitment.junior": "Junior",
+  "boilerplate.containers.Payroll.recruitment.senior": "Senior",
+  "boilerplate.containers.Payroll.recruitment.supervisor": "Supervisor",
+  "boilerplate.containers.Payroll.recruitment.manager": "Manager",
+  "boilerplate.containers.Payroll.recruitment.director": "Director",
+  "boilerplate.containers.Payroll.recruitment.educationLevel": "Education Level",
+  "boilerplate.containers.Payroll.recruitment.highSchool": "High School",
+  "boilerplate.containers.Payroll.recruitment.bachelorDegree": "Bachelor Degree",
+  "boilerplate.containers.Payroll.recruitment.diploma": "Diploma",
+  "boilerplate.containers.Payroll.recruitment.masters": "Masters",
+  "boilerplate.containers.Payroll.recruitment.dpa-phd": "DPA/PHD",
+  "boilerplate.containers.Payroll.recruitment.educationMajor": "Education Major",
   "boilerplate.containers.Payroll.recruitment.technicalInterviewStatus": "Technical Interview Status",
   "boilerplate.containers.Payroll.recruitment.hrAppStatus": "Hr App Status",
   "boilerplate.containers.Payroll.recruitment.managerAppStatus": "Manager App Status",
