create `ReviewEmploymentRequest` pages

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2203,7 +2203,11 @@
   "boilerplate.containers.Payroll.recruitment.otherLanguage": "لغة أخرى",
   "boilerplate.containers.Payroll.recruitment.languageInfo": "يرجى تحديد اللغة المطلوبة وتحديد المستوى المطلوب",
   "boilerplate.containers.Payroll.recruitment.jobSpecifications": "مواصفات الوظيفة",
+  "boilerplate.containers.Payroll.recruitment.positionType": "نوع الوظيفة",
   "boilerplate.containers.Payroll.recruitment.male": "ذكر",
+  "boilerplate.containers.Payroll.recruitment.createJobAdvertisement": "إنشاء إعلان وظيفة",
+  "boilerplate.containers.Payroll.recruitment.createEmploymentRequest": "إنشاء طلب توظيف",
+  "boilerplate.containers.Payroll.recruitment.viewEmploymentRequest": "عرض طلب التوظيف",
   "boilerplate.containers.Payroll.recruitment.female": "أنثى",
   "boilerplate.containers.Payroll.recruitment.any": "أي",
   "boilerplate.containers.Payroll.recruitment.age": "العمر",
