--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2155,7 +2155,11 @@
   "boilerplate.containers.Payroll.recruitment.languageInfo": "Please Tick The Language That Is Required And Specify The Required Level",
   "boilerplate.containers.Payroll.recruitment.jobSpecifications": "Job Specifications",
   "boilerplate.containers.Payroll.recruitment.male": "Male",
+  "boilerplate.containers.Payroll.recruitment.positionType": "Position Type",
   "boilerplate.containers.Payroll.recruitment.female": "Female",
+  "boilerplate.containers.Payroll.recruitment.createEmploymentRequest": "Create Employment Request",
+  "boilerplate.containers.Payroll.recruitment.viewEmploymentRequest": "View Employment Request",
+  "boilerplate.containers.Payroll.recruitment.createJobAdvertisement": "Create Job Advertisement",
   "boilerplate.containers.Payroll.recruitment.any": "Any",
   "boilerplate.containers.Payroll.recruitment.age": "Age",
   "boilerplate.containers.Payroll.recruitment.year": "Year",
