`Personal`  page : add hr & work email input's

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1707,7 +1707,10 @@
   "boilerplate.containers.Payroll.Employee.personal.employeeCode": "كود الموظف",
   "boilerplate.containers.Payroll.Employee.personal.employeeCodeAlreadyExistReplacedWithNewCode": "رمز الموظف موجود بالفعل، وتم استبداله برمز جديد",
   "boilerplate.containers.Payroll.Employee.personal.employeename": "اسم الموظف",
+  "boilerplate.containers.Payroll.Employee.personal.isHR": "هل اتش ار",
+  "boilerplate.containers.Payroll.Employee.personal.branches": "الفروع",
   "boilerplate.containers.Payroll.Employee.personal.status": "الحالة",
+  "boilerplate.containers.Payroll.Employee.personal.workEmail": "البريد الإلكتروني العمل",
   "boilerplate.containers.Payroll.Employee.personal.taxableStuff": "الاشياء الخاضعة للضريبة",
   "boilerplate.containers.Payroll.Employee.personal.insuranceSalary": "المرتب التاميني",
   "boilerplate.containers.Payroll.Employee.personal.basicSalary": "المرتب الاساسي",
