--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1662,6 +1662,9 @@
   "boilerplate.containers.Payroll.Employee.personal.idCardNumber": "Id Card Number",
   "boilerplate.containers.Payroll.Employee.personal.taxableStuff": "Taxable Stuff",
   "boilerplate.containers.Payroll.Employee.personal.address": "Address",
+  "boilerplate.containers.Payroll.Employee.personal.branches": "Branches",
+  "boilerplate.containers.Payroll.Employee.personal.isHR": "Is HR",
+  "boilerplate.containers.Payroll.Employee.personal.workEmail": "Work Email",
   "boilerplate.containers.Payroll.Employee.personal.netSalary": "Net Salary",
   "boilerplate.containers.Payroll.Employee.personal.department": "Department",
   "boilerplate.containers.Payroll.Employee.personal.postOverTime": "Post Over Time",
