create `HrPermission` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -984,6 +984,14 @@
   "boilerplate.containers.Payroll.Setting.parentName": "القائمة الرئيسية",
   "boilerplate.containers.Payroll.Setting.menuName": "اسم القائمة",
   "boilerplate.containers.Payroll.Setting.delete": "حذف",
+  "boilerplate.containers.Payroll.Setting.vacation": "إجازة",
+  "boilerplate.containers.Payroll.Setting.permission": "إذن",
+  "boilerplate.containers.Payroll.Setting.mission": "مهمة",
+  "boilerplate.containers.Payroll.Setting.select": "تحديد",
+  "boilerplate.containers.Payroll.Setting.penalty": "عقوبة",
+  "boilerplate.containers.Payroll.Setting.overTime": "وقت إضافي",
+  "boilerplate.containers.Payroll.Setting.reward": "مكافأة",
+  "boilerplate.containers.Payroll.Setting.organization": "المنظمة",
   "boilerplate.containers.Payroll.Setting.update": "تعديل",
   "boilerplate.containers.Payroll.Setting.addDecorator": "إضافة ديكوريتور",
   "boilerplate.containers.Payroll.Setting.add": "اضافة",
