--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -958,6 +958,14 @@
   "boilerplate.containers.Payroll.Setting.parentName": "Parent Menu",
   "boilerplate.containers.Payroll.Setting.menuName": "Menu Name",
   "boilerplate.containers.Payroll.Setting.delete": "Delete",
+  "boilerplate.containers.Payroll.Setting.vacation": "Vacation",
+  "boilerplate.containers.Payroll.Setting.permission": "Permission",
+  "boilerplate.containers.Payroll.Setting.select": "Select",
+  "boilerplate.containers.Payroll.Setting.mission": "Mission",
+  "boilerplate.containers.Payroll.Setting.penalty": "Penalty",
+  "boilerplate.containers.Payroll.Setting.overTime": "Over Time",
+  "boilerplate.containers.Payroll.Setting.reward": "Reward",
+  "boilerplate.containers.Payroll.Setting.organization": "Organization",
   "boilerplate.containers.Payroll.Setting.subject": "Subject",
   "boilerplate.containers.Payroll.Setting.addDecorator": "Add Decorator",
   "boilerplate.containers.Payroll.Setting.formTypeName": "Form Type Name",
