create `AsChoice` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -795,6 +795,9 @@
   "boilerplate.containers.Ecommerce.Checkout.invoice_title": "فاتورة قابلة للتحرير",
   "boilerplate.containers.Ecommerce.Checkout.invoice_desc": "فاتورة HTML قابلة للتحرير / قابلة للطباعة",
   "boilerplate.components.tables.codes.code": "الكود",
+  "boilerplate.components.tables.codes.from": "من",
+  "boilerplate.components.tables.codes.to": "الي",
+  "boilerplate.components.tables.codes.choiceGrade": "درجة الاختيار",
   "boilerplate.components.tables.codes.requirements": "المتطلبات",
   "boilerplate.components.tables.codes.name": "الاسم بالعربية",
   "boilerplate.components.tables.codes.enname": "الاسم بالانجليزية",
