--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -795,6 +795,9 @@
   "boilerplate.containers.Ecommerce.Checkout.invoice_title": "Editable Invoice",
   "boilerplate.containers.Ecommerce.Checkout.invoice_desc": "An Editable/Printable HTML Invoice",
   "boilerplate.components.tables.codes.code": "Code",
+  "boilerplate.components.tables.codes.from": "From",
+  "boilerplate.components.tables.codes.to": "To",
+  "boilerplate.components.tables.codes.choiceGrade": "Choice Grade",
   "boilerplate.components.tables.codes.requirements": "Requirements",
   "boilerplate.components.tables.codes.name": "Arabic Name",
   "boilerplate.components.tables.codes.enname": "English Name",
