--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -941,7 +941,7 @@
   "boilerplate.containers.Payroll.Import": "Import",
   "boilerplate.containers.Payroll.reset": "reset",
   "boilerplate.containers.Payroll.deleteMessage": "Are You Sure You Want To Delete",
-  "boilerplate.containers.Payroll.confirmation": "Confirmation Message",
+  "boilerplate.containers.Payroll.confirmation": "Are You Sure You Want To Save",
   "boilerplate.containers.Payroll.applynewshift": "Apply new shift",
 
   "boilerplate.containers.Payroll.employees": "View Employees",
@@ -953,7 +953,12 @@
   "boilerplate.containers.Payroll.FileIsEmpty": "File Is Empty",  
   "boilerplate.containers.Payroll.sort": "Sort",  
   "boilerplate.containers.Payroll.percentage": "Percentage",  
-  "boilerplate.containers.Payroll.relation": "Relation",
+  "boilerplate.containers.Payroll.relation": "Relation",  
+  "boilerplate.containers.Payroll.branch": "Company",
+  
+  "boilerplate.containers.Payroll.Postmonth": "Postpone to Month",
+  "boilerplate.containers.Payroll.Postyear": "Postpone to Year",
+
 
   "boilerplate.containers.Payroll.Setting.parentName": "Parent Menu",
   "boilerplate.containers.Payroll.Setting.menuName": "Menu Name",
@@ -1605,7 +1610,29 @@
     "boilerplate.containers.Payroll.Payroll.max": "Maximum",
     "boilerplate.containers.Payroll.Payroll.calcValMin": "Minimum Calc Value",
     "boilerplate.containers.Payroll.Payroll.calcValMax": "Maximum Calc Value",
+    "boilerplate.containers.Payroll.Payroll.val": "Value/Quantity",    
+    "boilerplate.containers.Payroll.Payroll.elementType": "Element type",    
+    "boilerplate.containers.Payroll.Payroll.elementMode": "Elment Mode",    
+    "boilerplate.containers.Payroll.Payroll.source": "Source",    
+    "boilerplate.containers.Payroll.Payroll.newval": "Enter new Employee Elements",    
+    "boilerplate.containers.Payroll.Payroll.ElementValCreateTitle": "Add Employee Element",
+    "boilerplate.containers.Payroll.Payroll.ElementValUpdateTitle": "update Employee Element",       
+    "boilerplate.containers.Payroll.Payroll.isNotUpdate": "Not Update Element, Add new Record",
+    "boilerplate.containers.Payroll.Payroll.deductionMonth": "Decuction Month",
+    "boilerplate.containers.Payroll.Payroll.deductionYear": "Deduction Year",
     
+    "boilerplate.containers.Payroll.Payroll.nativeTotalValue": "Basic Loan",
+    "boilerplate.containers.Payroll.Payroll.totalValue": "Total Value",
+    "boilerplate.containers.Payroll.Payroll.paysNo": "Pay No",
+    "boilerplate.containers.Payroll.Payroll.payvalue": "Pay Value",    
+    "boilerplate.containers.Payroll.Payroll.lineNo": "Line No",
+    "boilerplate.containers.Payroll.Payroll.isPaid": "Paid",    
+    "boilerplate.containers.Payroll.Payroll.post": "Delay",
+    "boilerplate.containers.Payroll.Payroll.recalculate": "ReCalculate ",    
+    "boilerplate.containers.Payroll.Payroll.LoanTrxCreateTitle": "Add Loan",
+    "boilerplate.containers.Payroll.Payroll.LoanTrxUpdateTitle": "Update Loan",
+    
+
 
   "boilerplate.containers.Payroll.transportaion.ip":"Transportaion",  
   "boilerplate.containers.Payroll.transportaion.DeviceUpdateTitle":"Update Device",
