Add Copy and Delay in elementvallist

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -987,6 +987,7 @@
   "boilerplate.containers.Payroll.yearName": "السنة",
   "boilerplate.containers.Payroll.totalvalue": "اجمالى القسط",
   "boilerplate.containers.Payroll.paysNo": "عدد الاقساط",
+  "boilerplate.containers.Payroll.copy": "نسخ",
   
   
   
