create `Competencies` pages

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2467,6 +2467,9 @@
   "boilerplate.containers.Payroll.assessment.addExample": "إضافة مثال",
   "boilerplate.containers.Payroll.assessment.noStuffFound": "لم يتم العثور على موظفين",
   "boilerplate.containers.Payroll.assessment.departmentName": "اسم القسم",
+  "boilerplate.containers.Payroll.assessment.category": "التصنيف",
+  "boilerplate.containers.Payroll.assessment.notEffective": "غير فعالة",
+  "boilerplate.containers.Payroll.assessment.arCompetencyName": "اسم الكفاءة العربية",
   "boilerplate.containers.Payroll.assessment.jobName": "اسم الوظيفة",
   "boilerplate.containers.Payroll.assessment.employeeName": "اسم الموظف",
   "boilerplate.containers.Payroll.assessment.addOrChangeStuff": "إضافة أو تغيير الموظفين",
