--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2403,12 +2403,15 @@
   "boilerplate.containers.Payroll.assessment.save": "Save",
   "boilerplate.containers.Payroll.assessment.close": "Close",
   "boilerplate.containers.Payroll.assessment.addExample": "Add Example",
-  "boilerplate.containers.Payroll.assessment.noStuffFound": "No Stuff Found",
+  "boilerplate.containers.Payroll.assessment.noStuffFound": "No Employee Found",
   "boilerplate.containers.Payroll.assessment.departmentName": "Department Name",
   "boilerplate.containers.Payroll.assessment.jobName": "Job Name",
   "boilerplate.containers.Payroll.assessment.employeeName": "Employee Name",
-  "boilerplate.containers.Payroll.assessment.addOrChangeStuff": "Add Or Change Stuff",
-  "boilerplate.containers.Payroll.assessment.stuffInfo": "Stuff Info",
+  "boilerplate.containers.Payroll.assessment.addOrChangeStuff": "Add Or Change Employee",
+  "boilerplate.containers.Payroll.assessment.stuffInfo": "Employee Info",
+  "boilerplate.containers.Payroll.assessment.category": "Category",
+  "boilerplate.containers.Payroll.assessment.notEffective": "Not Effective",
+  "boilerplate.containers.Payroll.assessment.arCompetencyName": "Arabic Competency Name",
   "boilerplate.containers.Payroll.assessment.true": "True",
   "boilerplate.containers.Payroll.assessment.false": "False",
   "boilerplate.containers.Payroll.assessment.oneByOne": "One By One",
