create `StaffJobKPI` page

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -837,6 +837,10 @@
   "boilerplate.components.tables.codes.bank": "Bank",
   "boilerplate.components.tables.codes.add": "Add New",
   "boilerplate.components.tables.codes.phone": "Phone",
+  "boilerplate.components.tables.codes.enKpidesc": "Kpi description",
+  "boilerplate.components.tables.codes.arKpidesc": "Arabic Kpi description",
+  "boilerplate.components.tables.codes.enJobKpi": "Job Kpi",
+  "boilerplate.components.tables.codes.arJobKpi": "Arabic Job Kpi",
   "boilerplate.components.tables.codes.course": "Course",
   "boilerplate.components.tables.codes.startdate": "Start Date",
   "boilerplate.components.tables.codes.enddate": "End Date",
