--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -821,6 +821,10 @@
   "boilerplate.components.tables.codes.finalGrad": "التقدير النهائي",
   "boilerplate.components.tables.codes.elJob": "الوظيفة",
   "boilerplate.components.tables.codes.elPercent": "النسبة",
+  "boilerplate.components.tables.codes.enKpidesc": "وصف مؤشرات الأداء الرئيسية",
+  "boilerplate.components.tables.codes.arKpidesc": "وصف مؤشرات الأداء الرئيسية بالعربية",
+  "boilerplate.components.tables.codes.enJobKpi": "مؤشر الأداء الرئيسي للوظيفة",
+  "boilerplate.components.tables.codes.arJobKpi": "مؤشر الأداء الرئيسي للوظيفة بالعربية",
   "boilerplate.components.tables.codes.month": "الشهر",
   "boilerplate.components.tables.codes.year": "السنة",
   "boilerplate.components.tables.codes.rate": "المعدل",
