--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -838,6 +838,8 @@
   "boilerplate.components.tables.codes.add": "Add New",
   "boilerplate.components.tables.codes.phone": "Phone",
   "boilerplate.components.tables.codes.enKpidesc": "Kpi description",
+  "boilerplate.components.tables.codes.enJobDesc": "Job description",
+  "boilerplate.components.tables.codes.arJobDesc": "Arabic Job description",
   "boilerplate.components.tables.codes.arKpidesc": "Arabic Kpi description",
   "boilerplate.components.tables.codes.enJobKpi": "Job Kpi",
   "boilerplate.components.tables.codes.arJobKpi": "Arabic Job Kpi",
