finish `IndividualDevelopmentPlan` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2461,6 +2461,25 @@
   "boilerplate.containers.Payroll.assessment.templateInfo": "معلومات القالب",
   "boilerplate.containers.Payroll.assessment.description": "الوصف",
   "boilerplate.containers.Payroll.assessment.arDescription": "الوصف بالعربية",
+  "boilerplate.containers.Payroll.assessment.insertDate": "إدراج التاريخ",
+  "boilerplate.containers.Payroll.assessment.status": "الحالة",
+  "boilerplate.containers.Payroll.assessment.date": "التاريخ",
+  "boilerplate.containers.Payroll.assessment.currentJobName": "اسم الوظيفة الحالية",
+  "boilerplate.containers.Payroll.assessment.department": "القسم",
+  "boilerplate.containers.Payroll.assessment.reportingTo": "تقديم التقارير إلى",
+  "boilerplate.containers.Payroll.assessment.currentSalary": "الراتب الحالي",
+  "boilerplate.containers.Payroll.assessment.hiringData": "تاريخ التوظيف",
+  "boilerplate.containers.Payroll.assessment.currentMainJobDuties": "الواجبات الرئيسية الحالية للوظيفة",
+  "boilerplate.containers.Payroll.assessment.employees": "الموظفين",
+  "boilerplate.containers.Payroll.assessment.addEmployee": "إضافة موظف",
+  "boilerplate.containers.Payroll.assessment.editEmployee": "تعديل الموظف",
+  "boilerplate.containers.Payroll.assessment.noEmployees": "لا يوجد موظفين",
+  "boilerplate.containers.Payroll.assessment.areaToImprove": "المجال للتحسين",
+  "boilerplate.containers.Payroll.assessment.targetOfPerformance": "هدف الأداء",
+  "boilerplate.containers.Payroll.assessment.developmentActivity": "نشاط التطوير",
+  "boilerplate.containers.Payroll.assessment.otherPleaseSpecify": "آخرى، الرجاء التحديد",
+  "boilerplate.containers.Payroll.assessment.resources": "الموارد",
+  "boilerplate.containers.Payroll.assessment.dateForCompletion": "تاريخ الانتهاء",
   "boilerplate.containers.Payroll.assessment.showStyles": "عرض الأنماط",
   "boilerplate.containers.Payroll.assessment.noCompetencyFound": "لم يتم العثور على كفاءة",
   "boilerplate.containers.Payroll.assessment.competencyInfo": "معلومات الكفاءة",
