--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2416,6 +2416,25 @@
   "boilerplate.containers.Payroll.assessment.addOrChangeStuff": "Add Or Change Employee",
   "boilerplate.containers.Payroll.assessment.stuffInfo": "Employee Info",
   "boilerplate.containers.Payroll.assessment.category": "Category",
+  "boilerplate.containers.Payroll.assessment.insertDate": "Insert Date",
+  "boilerplate.containers.Payroll.assessment.status": "Status",
+  "boilerplate.containers.Payroll.assessment.date": "Date",
+  "boilerplate.containers.Payroll.assessment.currentJobName": "Current Job Name",
+  "boilerplate.containers.Payroll.assessment.department": "Department",
+  "boilerplate.containers.Payroll.assessment.reportingTo": "Reporting To",
+  "boilerplate.containers.Payroll.assessment.currentSalary": "Current Salary",
+  "boilerplate.containers.Payroll.assessment.hiringData": "Hiring Data",
+  "boilerplate.containers.Payroll.assessment.currentMainJobDuties": "Current Main Job Duties",
+  "boilerplate.containers.Payroll.assessment.employees": "Employees",
+  "boilerplate.containers.Payroll.assessment.addEmployee": "Add Employee",
+  "boilerplate.containers.Payroll.assessment.editEmployee": "Edit Employee",
+  "boilerplate.containers.Payroll.assessment.noEmployees": "No Employees",
+  "boilerplate.containers.Payroll.assessment.areaToImprove": "Area To Improve",
+  "boilerplate.containers.Payroll.assessment.targetOfPerformance": "Target Of Performance",
+  "boilerplate.containers.Payroll.assessment.developmentActivity": "Development Activity",
+  "boilerplate.containers.Payroll.assessment.otherPleaseSpecify": "Other Please Specify",
+  "boilerplate.containers.Payroll.assessment.resources": "Resources",
+  "boilerplate.containers.Payroll.assessment.dateForCompletion": "Date For Completion",
   "boilerplate.containers.Payroll.assessment.notEffective": "Not Effective",
   "boilerplate.containers.Payroll.assessment.arCompetencyName": "Arabic Competency Name",
   "boilerplate.containers.Payroll.assessment.true": "True",
