create startup `UploadAssessmentGuidelines` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2476,6 +2476,15 @@
   "boilerplate.containers.Payroll.assessment.noEmployees": "لا يوجد موظفين",
   "boilerplate.containers.Payroll.assessment.areaToImprove": "المجال للتحسين",
   "boilerplate.containers.Payroll.assessment.targetOfPerformance": "هدف الأداء",
+  "boilerplate.containers.Payroll.assessment.upload": "تحميل",
+  "boilerplate.containers.Payroll.assessment.uploadAr": "تحميل بالعربية",
+  "boilerplate.containers.Payroll.assessment.preview": "معاينة",
+  "boilerplate.containers.Payroll.assessment.competenciesGuideline": "دليل الكفاءات",
+  "boilerplate.containers.Payroll.assessment.rating": "التقييم",
+  "boilerplate.containers.Payroll.assessment.performanceAppraisalPurpose": "هدف تقييم الأداء",
+  "boilerplate.containers.Payroll.assessment.invalidFileName": "اسم ملف غير صالح",
+  "boilerplate.containers.Payroll.assessment.fileExtensionShouldBePdf": "يجب أن يكون امتداد الملف PDF",
+  "boilerplate.containers.Payroll.assessment.fileSizeShouldBeLessThan10MB": "يجب أن يكون حجم الملف أقل من 10 ميجابايت",
   "boilerplate.containers.Payroll.assessment.developmentActivity": "نشاط التطوير",
   "boilerplate.containers.Payroll.assessment.otherPleaseSpecify": "آخرى، الرجاء التحديد",
   "boilerplate.containers.Payroll.assessment.resources": "الموارد",
