--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2434,6 +2434,15 @@
   "boilerplate.containers.Payroll.assessment.developmentActivity": "Development Activity",
   "boilerplate.containers.Payroll.assessment.otherPleaseSpecify": "Other Please Specify",
   "boilerplate.containers.Payroll.assessment.resources": "Resources",
+  "boilerplate.containers.Payroll.assessment.upload": "Upload",
+  "boilerplate.containers.Payroll.assessment.invalidFileName": "Invalid file name",
+  "boilerplate.containers.Payroll.assessment.fileExtensionShouldBePdf": "File extension should be pdf",
+  "boilerplate.containers.Payroll.assessment.fileSizeShouldBeLessThan10MB": "File size should be less than 10MB",
+  "boilerplate.containers.Payroll.assessment.uploadAr": "Upload Arabic",
+  "boilerplate.containers.Payroll.assessment.preview": "Preview",
+  "boilerplate.containers.Payroll.assessment.competenciesGuideline": "Competencies Guideline",
+  "boilerplate.containers.Payroll.assessment.rating": "Rating",
+  "boilerplate.containers.Payroll.assessment.performanceAppraisalPurpose": "Performance Appraisal Purpose",
   "boilerplate.containers.Payroll.assessment.dateForCompletion": "Date For Completion",
   "boilerplate.containers.Payroll.assessment.notEffective": "Not Effective",
   "boilerplate.containers.Payroll.assessment.arCompetencyName": "Arabic Competency Name",
